--- a/images/index.html
+++ b/images/index.html
@@ -12,20 +12,20 @@
 		p{line-height:24px; text-indent:26px; margin-bottom:5px}
 
 		#wrap{width: 770px;margin: 0 auto}
-		#header{width: 762px;border: 4px solid #badbdb;background: url(../photos/case2/images/banner.gif) no-repeat;height: 92px;text-align: right;color: #fff}
+		#header{width: 762px;border: 4px solid #badbdb;background: url(banner.gif) no-repeat;height: 92px;text-align: right;color: #fff}
 		#header a{color: #fff;margin: 0 5px}
 
 		#mainbody{width: 100%}
 		#footer{;widows: 100%;text-align: center;padding: 20px 0}
 
 		.content{background: #eff9f9;padding: 44px 15px 15px;border: 4px solid #badbdb}
-		.profile{background: url(../photos/case2/images/t_profile.gif) no-repeat #eff9f9}
-		.book{background: url(../photos/case2/images/t_book.gif) no-repeat #eff9f9}
+		.profile{background: url(t_profile.gif) no-repeat #eff9f9}
+		.book{background: url(t_book.gif) no-repeat #eff9f9}
 		.book img{border: 1px solid #b1adad; margin: 10px 18px}
 	</style>
 </head>
 <body>
-	<video src="../music/Justin Bieber,Big Sean - As Long As You Love Me.mp3" autoplay="autoplay" loop="-1" controls="controls"></video>
+	<video src="Justin Bieber,Big Sean - As Long As You Love Me.mp3" autoplay="autoplay" loop="-1" controls="controls"></video>
 	<div id="wrap">
 		<div id="header">
 			<div class="header">
@@ -41,12 +41,12 @@
 			</div>
 		</div>
 		<div class="content book">
-				<img src="../photos/case2/images/book1.jpg">
-				<img src="../photos/case2/images/book2.jpg">
-				<img src="../photos/case2/images/book3.jpg">
-				<img src="../photos/case2/images/book4.jpg">
-				<img src="../photos/case2/images/book5.jpg">
-				<img src="../photos/case2/images/book6.jpg">
+				<img src="book1.jpg">
+				<img src="book2.jpg">
+				<img src="book3.jpg">
+				<img src="book4.jpg">
+				<img src="book5.jpg">
+				<img src="book6.jpg">
 		</div>
 		<div id="footer">copyright © 2016-2017 Jimmyspa.com All Rights Reserved.</div>
 	</div>
