--- a/images/css.html
+++ b/images/css.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>小伙子家庭作业来了</title>
+	<title>css</title>
 	<style type="text/css">
 		*{margin: 0;padding: 0;font-size: 12px;color: #346667;font-family: Arial,Helvetica,sans-serif,"宋体"}
 		a{text-decoration: none}
